<resources>
    <string name="app_name">TechStore</string>
    <string name="logo_ts">logoTechStore</string>
    <string name="first_name_label">Nombre</string>
    <string name="last_name_label">Apellido</string>
    <string name="email_label">Correo electrónico</string>
    <string name="password_label">Contraseña</string>
    <string name="new_password_label">Nueva contraseña</string>
    <string name="confirm_new_password">Confirmar nueva contraseña</string>
    <string name="confirm_password_label">Confirmar contraseña</string>
    <string name="reset_password">Restablecer contraseña</string>
    <string name="recover_password_message">Por favor ingrese su dirección de correo electrónico. Recibirá un link para crear una nueva contraseña.</string>
    <string name="register">Registrarse</string>
    <string name="sign_in">Iniciar sesión</string>
    <string name="send_button">Enviar</string>
    <string name="already_have_account">Ya tienes una cuenta? Iniciar sesión</string>
    <string name="forgot_password">Has olvidado tu contraseña</string>
    <string name="no_account">No tienes una cuenta? Registrarse</string>
    <string name="forgot_password_question">¿Olvidó su contraseña?</string>
    <string name="password_reset_message">¡Tu contraseña ha sido restablecida!</string>
    <string name="done">Hecho</string>
    <string name="enter_new_password">¡Ingresa tu nueva contraseña y confirma!</string>
    <string name="sign_out">Cerrar sesión</string>
    <string name="activate_info">Por favor ingrese el código que recibió por correo electrónico para poder activar su cuenta</string>
    <string name="activate_label">Código de activación</string>
    <string name="activate">Activar</string>
    <string name="verification_code_label">Código de verificación</string>
    <string name="verify">Verificar</string>
    <string name="verification_code_info">Por favor ingrese el códido que recibió por correo electrónico para poder actualizar su contraseña</string>
    <string name="forgot_password_title">Olvidaste tu contraseña</string>
    <string name="forgot_password_info">Por favor ingrese su dirección de correo electrónico. Recibirá un código para poder crear una nueva contraseña</string>
    <string name="reset_password_message">¡Tu contraseña ha sido restablecida con éxito!</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Inicio</string>
    <string name="title_cart">Carrito</string>
    <string name="title_order">Mis compras</string>
    <string name="title_profile">Perfil</string>
    <string name="banner_image">banner image</string>
    <string name="higher_price">Mayor precio</string>
    <string name="lower_price">Menor precio</string>
    <string name="search_hint">Buscar...</string>
    <string name="description_profile_image">Imagen de perfil</string>
    <string name="categories">Categorías</string>
    <string name="see_all">Ver todas</string>
    <string name="see_all_products">Mostrar todos</string>
    <string name="products">Productos</string>
    <string name="username">Username</string>
    <string name="welcome">Bienvenido</string>
    <string name="description_product_image">Imagen del producto</string>
    <string name="description_product">Descripción</string>
    <string name="product_name">Nombre del producto</string>
    <string name="product_price">$999.999</string>
    <string name="personal_information">Información Personal</string>
    <string name="phone">Teléfono</string>
    <string name="address">Dirección</string>
    <string name="no_reviews">No hay reseñas disponibles</string>
    <string name="reviews">Reseñas</string>
    <string name="add_to_cart">Agregar al carrito</string>
    <string name="delete_product">Eliminar producto</string>
    <string name="decrease">Decrementar cantidad</string>
    <string name="increase">Incrementar cantidad</string>
    <string name="shopping_cart">Carrito de Compras</string>
    <string name="empty_cart">Carrito vacío</string>
</resources>