<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/ivProduct"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/description_product_image"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/tvProductName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="@dimen/text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivProduct"
            app:layout_constraintTop_toTopOf="@+id/ivProduct"
            tools:text="Motorola Edge 50 Fusion" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="@dimen/text_size"
            app:layout_constraintStart_toStartOf="@+id/tvProductName"
            app:layout_constraintTop_toBottomOf="@+id/tvProductName"
            tools:text="$799.999,00" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/ivProduct"
            app:layout_constraintStart_toStartOf="@+id/tvPrice">

            <ImageButton
                android:id="@+id/btnDecrease"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/decrease"
                android:src="@drawable/ic_decrease_24"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/tvQuantity"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="1" />

            <ImageButton
                android:id="@+id/btnIncrease"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/increase"
                android:src="@drawable/ic_increase_24"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/btnRemove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/delete_product"
            android:padding="8dp"
            android:src="@drawable/ic_delete_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>