<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:text="@string/sign_in"
                android:textSize="40sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/email_label"
                app:boxCornerRadiusBottomEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusTopStart="30dp"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:textSize="@dimen/text_size"
                    android:inputType="textEmailAddress"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/password_label"
                app:endIconMode="password_toggle"
                app:boxCornerRadiusBottomEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusTopStart="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textFieldEmail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:textSize="@dimen/text_size"
                    android:inputType="textPassword"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="32dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/forgot_password_question"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="@dimen/text_size"
                android:textColor="@color/black"
                android:padding="15dp"/>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/primary"
                android:text="@string/sign_in"
                android:textAllCaps="true"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"
                android:textColor="@color/white"/>


            <TextView
                android:id="@+id/tvNoAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="32dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/no_account"
                android:fontFamily="@font/montserrat_regular"
                android:textColor="@color/misty_mauve"
                android:textSize="@dimen/text_size"
                android:padding="15dp"/>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>