<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.recover.NewPasswordActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivBack"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:focusable="true"
                    app:srcCompat="@drawable/ic_back_16"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/tvBar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/new_password_label"
                    android:gravity="center"
                    android:fontFamily="@font/montserrat_bold"
                    android:textSize="@dimen/text_size"
                    />

            </LinearLayout>

            <TextView
                android:id="@+id/tvInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/enter_new_password"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="@dimen/text_size"
                android:textColor="@color/misty_mauve"
                android:padding="15dp"/>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/new_password_label"
                app:boxCornerRadiusBottomEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusTopStart="30dp"
                app:endIconMode="password_toggle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textFieldEmail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:inputType="textPassword"
                    android:textSize="@dimen/text_size"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/confirm_new_password"
                app:boxCornerRadiusBottomEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusTopStart="30dp"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:inputType="textPassword"
                    android:textSize="@dimen/text_size"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnResetPassword"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/primary"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/reset_password"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>