<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/montserrat_bold"
            android:textAlignment="center"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/ivProduct"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:scaleType="fitCenter"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat_regular" />

        <TextView
            android:id="@+id/tvStock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat_regular"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnAddToCart"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/button_height"
            android:layout_margin="10dp"
            android:backgroundTint="@color/primary"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/add_to_cart"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvReviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/reviews"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <RatingBar
                android:id="@+id/ratingBarAverage"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="true"
                android:numStars="5" />

            <TextView
                android:id="@+id/tvAverageRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/montserrat_bold"
                android:textSize="@dimen/text_size" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvNoReviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/no_reviews"
            android:textAlignment="center"
            android:textSize="@dimen/text_size"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerReviews"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:layout_marginTop="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
    </LinearLayout>
</ScrollView>